--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
     justify-content: center;
     width: 100%;
     min-height: 0;
+    position: relative;
   }
   canvas {
     border: 2px solid #e94560;
@@ -76,37 +77,34 @@
     display: block;
   }
 
-  /* Bottom controls wrapper — stacks on desktop, side-by-side on mobile */
+  /* Bottom controls wrapper */
   #bottom-controls {
     flex-shrink: 0;
   }
-  /* D-pad always visible on touch devices */
+  /* D-pad: hidden by default, shown on touch/mobile as invisible overlay */
   #mobile-controls {
     display: none;
-    padding: 6px 0;
-    padding-bottom: max(env(safe-area-inset-bottom, 6px), 6px);
-    flex-shrink: 0;
   }
   .dpad {
     display: grid;
-    grid-template-columns: repeat(3, min(11vw, 44px));
-    grid-template-rows: repeat(3, min(11vw, 44px));
-    gap: 2px;
-    justify-content: center;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    gap: 0;
+    width: 100%; height: 100%;
   }
   .dpad-empty { }
   .dpad button {
     width: 100%; height: 100%;
-    font-size: min(5vw, 20px);
-    background: #16213e;
-    color: #e94560;
-    border: 2px solid #e94560;
-    border-radius: 10px;
+    font-size: 0;
+    background: transparent;
+    color: transparent;
+    border: none;
     cursor: pointer;
     -webkit-tap-highlight-color: transparent;
     touch-action: manipulation;
+    outline: none;
   }
-  .dpad button:active, .dpad button.pressed { background: #e94560; color: white; }
+  .dpad button:active, .dpad button.pressed { background: rgba(233,69,96,0.12); }
 
   #instructions {
     font-size: min(2.8vw, 11px);
@@ -153,6 +151,15 @@
     -webkit-tap-highlight-color: transparent;
   }
   #pause-btn:active { background: #e94560; color: #fff; }
+  #fullscreen-btn {
+    position: fixed; top: env(safe-area-inset-top, 8px); left: 10px;
+    z-index: 15; background: rgba(22,33,62,0.85); border: 2px solid #00ff88;
+    color: #00ff88; font-size: 16px; width: 36px; height: 36px;
+    border-radius: 8px; cursor: pointer; display: none;
+    align-items: center; justify-content: center;
+    -webkit-tap-highlight-color: transparent;
+  }
+  #fullscreen-btn:active { background: #00ff88; color: #1a1a2e; }
 
   /* Overlays */
   .overlay {
@@ -236,32 +243,30 @@
   #progress-bar { width: min(50vw, 200px); height: 5px; background: #16213e; border-radius: 3px; margin-top: 8px; overflow: hidden; }
   #progress-fill { height: 100%; background: linear-gradient(90deg, #e94560, #ffd700); border-radius: 3px; transition: width 0.5s; }
 
-  /* Mobile: overlay controls on top of game, maximize canvas space */
+  /* Mobile: overlay controls on game, maximize canvas space */
   @media (hover: none) and (pointer: coarse), (max-width: 768px) {
     h1 { display: none; }
     #instructions { display: none; }
     #info, #info-row2 { font-size: min(3vw, 12px); margin-bottom: 1px; }
     .heart-icon { font-size: min(3.5vw, 14px) !important; }
-    #game-area { flex: 1; min-height: 0; }
-    /* Float controls over the game */
+    /* Invisible D-pad overlaid on left half of game area */
+    #mobile-controls {
+      display: block !important; position: absolute;
+      left: 0; top: 0; bottom: 0; width: 50%;
+      z-index: 8; pointer-events: auto;
+    }
+    /* Remove bottom-controls from flow */
     #bottom-controls {
-      position: fixed; bottom: 0; left: 0; right: 0;
-      display: flex; align-items: flex-end; justify-content: space-between;
+      position: fixed; bottom: 0; right: 0;
+      pointer-events: none; z-index: 10;
       padding: 0 6px;
       padding-bottom: max(env(safe-area-inset-bottom, 4px), 4px);
-      pointer-events: none; z-index: 10;
     }
-    #mobile-controls { display: block; padding: 0; pointer-events: auto; opacity: 0.7; }
+    /* Ability bar: small buttons, bottom-right */
     #ability-bar {
       flex-direction: column !important; padding: 0; gap: 3px !important;
-      pointer-events: auto; opacity: 0.7;
+      pointer-events: auto; opacity: 0.75;
     }
-    .dpad {
-      grid-template-columns: repeat(3, 36px) !important;
-      grid-template-rows: repeat(3, 36px) !important;
-      gap: 2px !important;
-    }
-    .dpad button { font-size: 16px !important; border-radius: 8px !important; }
     .ability-slot { width: 36px !important; height: 36px !important; border-radius: 8px !important; }
     .ability-slot .ability-icon { font-size: 14px !important; }
     .ability-slot .ability-key { display: none; }
@@ -281,25 +286,28 @@
   <div id="key-status">&#128477;</div>
   <div style="text-align:right;font-size:min(2.8vw,11px);color:#666;" id="score-display"></div>
 </div>
-<div id="game-area"><canvas id="game" width="640" height="640"></canvas></div>
-<div id="instructions">KEY unlocks exit | Hearts = +1 life | Coins = score | P = Pause | Abilities: Space/Shift/F</div>
-
-<button id="pause-btn" onclick="togglePause()">&#10074;&#10074;</button>
-
-<div id="bottom-controls">
+<div id="game-area">
+  <canvas id="game" width="640" height="640"></canvas>
   <div id="mobile-controls">
     <div class="dpad">
       <div class="dpad-empty"></div>
-      <button id="btn-up">&#9650;</button>
+      <button id="btn-up" aria-label="Up"></button>
       <div class="dpad-empty"></div>
-      <button id="btn-left">&#9664;</button>
+      <button id="btn-left" aria-label="Left"></button>
       <div class="dpad-empty"></div>
-      <button id="btn-right">&#9654;</button>
+      <button id="btn-right" aria-label="Right"></button>
       <div class="dpad-empty"></div>
-      <button id="btn-down">&#9660;</button>
+      <button id="btn-down" aria-label="Down"></button>
       <div class="dpad-empty"></div>
     </div>
   </div>
+</div>
+<div id="instructions">KEY unlocks exit | Hearts = +1 life | Coins = score | P = Pause | Abilities: Space/Shift/F</div>
+
+<button id="pause-btn" onclick="togglePause()">&#10074;&#10074;</button>
+<button id="fullscreen-btn">&#x26F6;</button>
+
+<div id="bottom-controls">
   <div id="ability-bar">
     <div class="ability-slot locked" id="slot-dash" onclick="useAbility('dash')">
       <div class="cd-overlay" style="height:0%"></div>
@@ -2278,6 +2286,32 @@ canvas.addEventListener('touchend', (e) => {
 
 // Prevent default touch behaviors on body
 document.body.addEventListener('touchmove', (e) => { e.preventDefault(); }, { passive: false });
+
+// ============================================================
+// FULLSCREEN
+// ============================================================
+const fsBtn = document.getElementById('fullscreen-btn');
+function toggleFullscreen() {
+  const el = document.documentElement;
+  if (document.fullscreenElement || document.webkitFullscreenElement) {
+    (document.exitFullscreen || document.webkitExitFullscreen).call(document);
+  } else if (el.requestFullscreen) {
+    el.requestFullscreen().catch(() => {});
+  } else if (el.webkitRequestFullscreen) {
+    el.webkitRequestFullscreen();
+  }
+}
+function updateFsIcon() {
+  const isFs = !!(document.fullscreenElement || document.webkitFullscreenElement);
+  fsBtn.textContent = isFs ? '\u2716' : '\u26F6';
+}
+fsBtn.addEventListener('click', toggleFullscreen);
+document.addEventListener('fullscreenchange', () => { updateFsIcon(); resizeCanvas(); });
+document.addEventListener('webkitfullscreenchange', () => { updateFsIcon(); resizeCanvas(); });
+// Show on mobile/touch
+if ('ontouchstart' in window || window.matchMedia('(max-width:768px)').matches) {
+  fsBtn.style.display = 'flex';
+}
 
 // ============================================================
 // START
